--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Muzzamal Hameed (Computer Scientist)</h1>
-								<p>Computer Scientist Well Versed in Python, Flutter,  <a href="https://github.com/Muzzamal-Hameed">@Muzzamal-Hameed</a> </p>
+								<p>Computer Scientist Well Versed in Python, Flutter, Laravel  <a href="https://github.com/Muzzamal-Hameed">@Muzzamal-Hameed</a> </p>
 							</div>
 						</div>
 						<nav>
