--- a/index.html
+++ b/index.html
@@ -82,17 +82,13 @@
 										</div>
 										<div class="field half">
 											<label for="address">Address</label>
-											<p> E-16, Islamabad </p>
+											<p> Islamabad </p>
 										</div>
 										<div class="field half">
 											<label for="phone">Phone No</label>
 											<p>+92-316-1501745</p>
 										</div>
 									</div>
-									<ul class="actions">
-										<li><p> Here will be the Map of address</p></li>
-										
-									</ul>
 								</form>
 								<ul class="icons">
 									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
