--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					<ul class="icons">
 						<li><a href="https://twitter.com/MuzzamalHameed" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://facebook.com/MuzzamalHameed" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="https://linkedin.com/in/MuzzamalHameed" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.linkedin.com/in/muzzamal-hameed/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/Muzzamal-Hameed" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 					</ul>
 				</article>
@@ -130,3 +130,4 @@
 
 	</body>
 </html>
+
