--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 				<!-- Work -->
 				<article id="work">
-    	<h2 class="major">Work</h2>
+    	<h2 class="major">Developments</h2>
 
     <!-- Python Projects -->
 	    <h3 class="major">Python Projects</h3>
@@ -222,5 +222,6 @@
 
 	</body>
 </html>
+
 
 
