--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	    <h3 class="major">Python Projects</h3>
 	
 	    <h3 class="major">01- Deep Fake Detection</h3>
-	    <img src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*rIo_3cA13NkRoJxHe_K1Cw.gif" alt="Deepfake Detection" style="width:100%;border-radius:10px;">
+	    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Audio_deepfake_detection.png/800px-Audio_deepfake_detection.png" alt="Deepfake Detection Workflow" style="width:100%;border-radius:10px;">
 	    <p>Used convolutional neural networks to detect fake video frames by identifying facial inconsistencies. Tech: Keras, OpenCV, LSTM.<br>
 	    <a href="https://github.com/yourusername/deepfake-detection" target="_blank">GitHub Repo</a></p>
 	
@@ -222,6 +222,7 @@
 
 	</body>
 </html>
+
 
 
 
